[package]
name = "taikai"
version = "0.1.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
edition = "2018"
description = "kaitai-like serialization and deserialization"
license = "GPL-3.0"
documentation = "https://docs.rs/taikai"
repository = "https://github.com/manuels/taikai"

[lib]
proc-macro = true

[dependencies]
failure = "0.1.8"
quote = "0.6.10"
proc-macro2 = "0.4.24"
syn = "0.15.21"
heck = "0.3.1"
serde = "1.0.114"
serde_yaml = "0.8.13"
serde_derive = "1.0.114"
itertools = "0.9.0"
encoding_rs = "0.8.23"

[dev-dependencies]
nom = "4.1.1"
tuple_utils = "0.3.0"
byteorder = "1.2.7"
log = "0.4.8"
